@@ -124,5 +124,6 @@ enum Preferences {
 	VIEW_MODE, 
 	VOLUME,
 	PLUGINS_ENABLED,
-	ARTIST_VIEW_MODE;
+	ARTIST_VIEW_MODE,
+	SIMILAR_MODE;
 }
